enterprise-sim/manifests/gateway/wildcard-gateway-template.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ${GATEWAY_NAME}
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.${K3S_INGRESS_DOMAIN}"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ${TLS_SECRET_NAME}
    hosts:
    - "*.${K3S_INGRESS_DOMAIN}"
